New post and minor updates

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,9 +10,9 @@
       </div>
 
       <div class="footer-col footer-col-3">
-        <p> 
+        <p>
           On this website I share some of my projects. <br/>
-          I hope you will find something interesing.
+          I hope you will find something interesting.
           </p>
         </p>
       </div>
