--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,4 +4,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link href="{{site.baseurl}}/css/custom.css" rel="stylesheet">
 </head>
